tests/ui/extend/extend_attr_enum.stderr
error: expected `struct`
 --> tests/ui/extend/extend_attr_enum.rs:4:1
  |
4 | enum Enum {
  | ^^^^
