tests/ui/extend/extend_attr_enum.rs
use derive_more_more::Extend;

#[derive(Extend)]
enum Enum {
    Rar,
}

fn main() {}
